Fix placeholder results counter, add missing margins, remove test recipe from recipe shell.

--- a/cooking/recipe/index.css
+++ b/cooking/recipe/index.css
@@ -195,6 +195,7 @@ h2 { /* ingred/instr headers */
     padding: 24px;
     box-sizing: border-box;
     border-radius: 15px;
+    margin-bottom: 20px;
 }
 
 #Notes h2 {
